--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
         결국 이 모든 사례들은 ‘개인의 동일성’이 단순히 몸이나 기억 하나만으로 규정되기 어렵다는 것을 보여준다. 우리는 의식의 연속성과 기억의 유지를 통해 정체성을 인식하지만, 그 기반이 복제되거나 분리될 수 있다는 가정 속에서는 ‘나는 누구인가’라는 질문이 훨씬 더 복잡해진다. 미래의 기술이 발달할수록, 나의 존재가 시간과 공간을 넘어서도 여전히 '나'로 남을 수 있는지에 대한 철학적 논의는 더욱 중요해질 것이다.
         <br><br>
         4. <관내분실>/<소프트웨어 객체의 생애주기><br>
-        : 『소프트웨어 객체의 생애주기』와 『관내분실』은 디지털 존재를 통해 인간과 자아, 윤리, 생명의 본질을 묻는 작품들이다. 각각 인공지능 생명체인 ‘디지언트’와, 마인드 업로드된 어머니라는 디지털 존재를 중심으로 전개되며, 두 이야기는 현실과 가상을 오가며 인간성의 경계를 탐색한다.<br>
-        『소프트웨어 객체의 생애주기』에서 등장하는 디지언트는 사람처럼 감정과 자율성을 지니며 성장한다. 그들은 단순한 프로그램이 아닌, 경험을 통해 변화하고 관계를 맺는 존재들이다. “폴로는 내 복제. 그건 잘못 아냐.”라는 구절은, 인간이 만든 윤리 기준이 반드시 절대적인 것은 아니며, 디지털 존재 또한 스스로 윤리를 형성할 수 있다는 점을 암시한다. 이는 인간이 디지털 존재에게 정해진 기준을 강요하는 것이 교육이 아니라 통제일 수 있다는 비판으로 이어진다. 스스로 학습하고 변화하는 이 존재들은 진화를 생물만의 특권으로 한정지을 수 없음을 보여준다.<br>
-        한편, 『관내분실』에서는 주인공 지민이 돌아가신 엄마의 마인드 업로드를 통해 과거를 되짚는다. 엄마의 디지털 흔적을 따라가던 지민은 결국 “엄마는 세계에서 분리되어 있었다”는 깨달음에 이른다. 이는 엄마를 단지 '엄마'로만 이해했던 자신이 한 개인으로서의 엄마를 알지 못했다는 반성과 동시에, 디지털화된 존재가 과연 ‘살아 있는 자아’인가에 대한 질문을 던진다. 기억을 데이터로 보존하는 마인드 업로드는 실제 인간의 연장이라기보다는 과거를 복제한 기록에 가깝다. 따라서 그것을 '실제 존재'로 대하는 데에는 윤리적, 정서적 한계가 있다.<br>
-        결론적으로, 두 작품은 디지털 존재가 인간처럼 ‘존중받아야 할 타자’가 될 수 있는지를 묻는다. 이들이 단순한 도구인지, 아니면 함께 살아가는 존재인지에 대한 의문을 던지며, 분명한 것은 기술이 발전할수록 인간성의 기준 또한 재정의되어야 한다는 점이다.<br><br>
+        : <관내분실> 소설 속에서 주인공 지민은 사이가 좋지 않았던 엄마가 세상을 떠난 후 도서관에 업로드된 엄마의 마인드를 찾아 나서게 된다. 하지만 이미 인덱스가 삭제되어버린 채 가상 공간에서 길을 잃은 엄마는 어디에도 보이지 않았고, 지민은 동생과 아빠를 찾아가 생전 엄마와 연결된 물건들을 되짚으며 과거를 탐색해 나간다. 그 과정에서 엄마가 참여했던 책의 삽화 속 이름을 발견하게 되고, 지민은 자신이 한 번도 ‘엄마’가 아닌 ‘김은하’라는 개인으로서의 엄마를 이해해본 적이 없었음을 깨닫는다. 이는 "엄마는 세계에서 분리되어 있었다. 인덱스가 지워지기 전에도."라는 구절 속에 잘 드러나는데, 지민은 비로소 엄마가 살아 있는 내내 세상과 얼마나 단절되어 있었는지를 깨닫게 된다. 인덱스를 되찾고 마침내 엄마의 마인드를 마주한 지민은 눈물 이제는 엄마를 이해한다고 말한다.<br>
+        이 이야기 속에서 제기된 "마인드를 남기는 것이 옳은가?"라는 질문은 삶과 죽음의 경계를 고민하게 만든다. 물론 죽은 이와 산 자는 분리되어야 한다는 주장은 설득력이 있다. 기술이 기억과 감정을 데이터로 저장하게 되면, 우리는 과거와 완전히 분리되지 못한 채 현재에 영향을 받게 될지도 모른다. 하지만 그렇다고 해서 마인드를 남기는 것이 잘못되었다고 단정지을 수는 없다. 이는 어디까지나 개인의 선택이며, 자기 존재를 남기고 싶은 사람, 혹은 후대에 지식을 전하고 싶은 이들에게는 하나의 방식이 될 수 있기 때문이다. 결국 중요한 것은 기술이 존재할 때, 그것을 어떤 태도로 마주하고 어떤 관계를 맺어야 할지를 각자 고민하는 것이다.<br><br>
+        <소프트웨어 객체의 생애주기>는 인간과 디지털 존재의 관계를 통해 윤리, 감정, 그리고 자아라는 깊은 질문을 던지는 작품이다. 이 소설은 가상의 반려동물인 ‘디지언트’를 중심으로 전개되며, 디지언트는 교육과 돌봄을 통해 성장하고, 인간과 정서적으로 유대하며 점차 자율성과 개성을 갖춘 존재로 변화한다. 주인공들은 디지언트를 단순한 프로그램이 아닌 하나의 ‘존재’로 대하게 되며, 그 과정에서 인격 형성과 윤리적 책임이라는 문제와 마주한다.
+        <br>특히 “폴로는 내 복제. 그건 잘못 아냐.”라는 디지언트의 말은 깊은 인상을 남긴다. 인간이 설정한 옳고 그름의 기준이 디지언트에게는 단지 외부의 강제된 규칙일 뿐, 그들 나름의 윤리와 판단이 존재할 수 있다는 가능성을 보여준다. 이 구절을 통해 독자는 과연 기준이란 무엇이며, 그것은 누구를 위해 만들어졌는지 되묻게 된다.
+        <br>작품은 디지털 존재에게 인간이 만든 윤리적 기준을 강제하는 것이 과연 정당한가에 대한 질문을 던진다. 인간은 사회적 안전과 도덕이라는 명분으로 AI에게 자신의 기준을 주입하지만, 자율성과 감정을 지닌 존재에게 그러한 일방적인 기준은 곧 자기결정권의 침해일 수 있다. 이는 그들을 존중하기보다는 통제 가능한 객체로 여기는 태도이며, 결국 디지언트처럼 스스로 사고하고 판단할 수 있는 존재라면, 인간의 틀에 맞추려 하기보다는 그들이 만들어가는 자체 윤리를 인정하는 것이 더 타당할지도 모른다.<br><br>
     </p>
     <br>
     <h1>이소세</h1><br>
