--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         body {
             margin: 20px 50px
         }
+        #pass {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -83,8 +86,9 @@
         <br>작품은 디지털 존재에게 인간이 만든 윤리적 기준을 강제하는 것이 과연 정당한가에 대한 질문을 던진다. 인간은 사회적 안전과 도덕이라는 명분으로 AI에게 자신의 기준을 주입하지만, 자율성과 감정을 지닌 존재에게 그러한 일방적인 기준은 곧 자기결정권의 침해일 수 있다. 이는 그들을 존중하기보다는 통제 가능한 객체로 여기는 태도이며, 결국 디지언트처럼 스스로 사고하고 판단할 수 있는 존재라면, 인간의 틀에 맞추려 하기보다는 그들이 만들어가는 자체 윤리를 인정하는 것이 더 타당할지도 모른다.<br><br>
     </p>
     <br>
-    <h1>이소세</h1><br>
-    <p>1. 『변신』 속에서 갑충으로 변해버린 그레고르의 모습은 주어진 현실이 가져오는 억압과 소외로 인해서 점점 더 자신의 존재를 잃어버리고 추락해버리는 현대인의 삶을 우회적으로 드러내고 있다. 프란츠 카프카는 우리에게 그레고르의 고백을 통해서 변형된 인간존재에 대한 실존적 고찰을 가능하게 한다. 실존적 소외의 상황에서 우리는 무엇을 할 수 있을지 쓰시오.
+    <div id="pass">
+        <h1>이소세</h1><br>
+        <p>1. 『변신』 속에서 갑충으로 변해버린 그레고르의 모습은 주어진 현실이 가져오는 억압과 소외로 인해서 점점 더 자신의 존재를 잃어버리고 추락해버리는 현대인의 삶을 우회적으로 드러내고 있다. 프란츠 카프카는 우리에게 그레고르의 고백을 통해서 변형된 인간존재에 대한 실존적 고찰을 가능하게 한다. 실존적 소외의 상황에서 우리는 무엇을 할 수 있을지 쓰시오.
         <br><br>
         : 그레고르는 벌레로 변한 후 냉정한 현실의 억압과 소외로 인해 비극적 결말을 맞이한다. 소외란 존재의 상실이며, 이러한 실존적 소외는 오늘날에도 너무나 많은 곳에 존재하고 있다.<br>
         멀리 보지 않더라도 지금 우리의 입장 역시 소외와 맞닿아 있다. 나는 여성이자 대학생으로서, 여러 특정 맥락에서 소외를 실감한다. 오직 여성이라는 이유로 능력을 불합리하게 평가받을 때, 한 사람의 존재가 아닌 성별로 분류된 기능으로만 취급되는 경험을 하게 된다. 이는 단지 차별이 아니라, 나라는 존재가 타인을 통해 하나의 고정된 틀로 정의되고 축소되는 실존적 경험이다.<br>
@@ -155,6 +159,7 @@
         우선, 사르트르의 지식인상은 너무 영웅적이라고 생각한다. 모순과 진실을 발견하고 약자를 대신해 말해주는 존재라고 말하는 것은 자칫 지식인을 대리인이나 교사처럼 위에 놓는 구조를 반복하게 만들 수 있고, 오히려 우리는 지식인의 권력성 자체도 비판의 대상이 되어야 한다는 시대를 살고 있기 때문이다. 특히 여성으로서, 페미니즘 의제에 대해 대신 말해주는 것보다 여성 주체가 자기 목소리를 낼 수 있게 공간을 만들어주는 역할이 더 중요하다고 보았다.<br>
         또한, 사르트르는 지식인의 실천을 매우 강조하지만 그들의 실천이 오히려 또 다른 특권 행사처럼 보일 수도 있다는 점을 간과했다고 생각한다. 우리는 사회 안에서 활동하는 지식인들이 공동체의 대표처럼 행동하면서 현장의 목소리를 왜곡하거나 대체해버릴 경우를 주의해야 한다.<br>
         그렇기에, 나는 사르트르의 지식인론이 여전히 중요한 통찰을 주지만 현대적인 맥락에서 재구성할 필요가 있다고 생각한다. 지식인이 앞에 나서기보다는 사회적 이해관계를 해석하는 조력자로서의 역할이 더 필요하며, 결국 지식인은 말하는 사람보다는 듣고, 이해하여 함께 의미를 만드는 사람이 아닐까?<br><br><br>
-    </p>
+        </p>
+    </div>
 </body>
 </html>
